tests/baselines/reference/duplicateAnonymousInners1.errors.txt
duplicateAnonymousInners1.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
duplicateAnonymousInners1.ts(14,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== duplicateAnonymousInners1.ts (2 errors) ====
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        class Helper {
    
        }
        
        class Inner {}
        // Inner should show up in intellisense
        
        export var Outer=0;
    }
    
    
    module Foo {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        
        // Should not be an error
        class Helper {
    
        }
        
        // Inner should not show up in intellisense
        // Outer should show up in intellisense
    
    }
    